Fixed some layout issue for global menu and page title

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,6 +5,17 @@ body {
     font-size: 100%;
 }
 
+#qaresourcesBackground {
+    background-image: url("../images/code_background.PNG");
+    opacity: .7;
+    position: relative;
+    height: 25em;
+    width: auto;
+    background-position: center;
+    margin-left: -10px;
+/*    right: 0;*/
+}
+
 .home_menu {
     background-color: white;
     position: fixed;
@@ -45,33 +56,9 @@ a:hover {
     border: -10px solid #868686;
 }
 
-#frontpagepic {
-    opacity: .4;
-    margin: -20px;
-    background-image: url("../images/code_background.PNG");
-    position: static;
-    height: 20rem;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-}
-
-#qaresourcesBackground {
-    background-image: url("../images/code_background.PNG");
-    opacity: .8;
-    position: relative;
-    height: 25em;
-    width: 100%;
-    background-position: center;
-}
-
 .pageTitle {
     font-family: sans-serif;
-    color: chartreuse;
+    color: White;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -90,8 +77,6 @@ a:hover {
     width: 3%
 
 }
-
-
 
 #Center-Object {
 /*    position: relative;*/
